feature/list-grid-view-button: store layout state in local storage

--- a/src/list-grid-view-button.html
+++ b/src/list-grid-view-button.html
@@ -23,7 +23,7 @@
       <i data-icon="list" class="fa-solid fa-table-list"></i>
       <i data-icon="grid" class="fa-solid fa-border-all"></i>
     </button>
-    <div data-notes-container class="notes-container notes-grid">
+    <div data-notes-container class="notes-container">
       <div>note 1</div>
       <div>note 2</div>
       <div>note 3</div>
