BEM class naming fixed

--- a/src/notes-navigation-item.html
+++ b/src/notes-navigation-item.html
@@ -14,15 +14,15 @@
     <title>Notes app</title>
   </head>
   <body>
-    <nav id="navbar" class="navigation__bar">
-      <ul class="list__of__pages">
-        <li class="list__of__pages__element active">
-          <i class="fa-regular fa-lightbulb icon__style"></i>
-          <a href="#notes" class="list__of__pages__element__link">Notes</a>
+    <nav id="navbar" class="navigation">
+      <ul class="navigation__list">
+        <li class="navigation__list__item navigation__list__item--active">
+          <i class="fa-regular fa-lightbulb"></i>
+          <a href="#notes" class="navigation__list__item__link">Notes</a>
         </li>
-        <li class="list__of__pages__element">
-          <i class="fa-solid fa-trash icon__style"></i>
-          <a href="#trash" class="list__of__pages__element__link">Trash</a>
+        <li class="navigation__list__item">
+          <i class="fa-solid fa-trash"></i>
+          <a href="#trash" class="navigation__list__item__link">Trash</a>
         </li>
       </ul>
     </nav>
