BEM naming for the trash navigation item task

--- a/src/trash-navigation-item.html
+++ b/src/trash-navigation-item.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="notes-nativation-item.css" />
+    <link rel="stylesheet" href="trash-nativation-item.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -16,11 +16,11 @@
   <body>
     <nav id="navbar" class="navigation">
       <ul class="navigation__list">
-        <li class="navigation__list__item navigation__list__item--active">
+        <li class="navigation__list__item">
           <i class="fa-regular fa-lightbulb"></i>
           <a href="#notes" class="navigation__list__item__link">Notes</a>
         </li>
-        <li class="navigation__list__item">
+        <li class="navigation__list__item navigation__list__item--active">
           <i class="fa-solid fa-trash"></i>
           <a href="#trash" class="navigation__list__item__link">Trash</a>
         </li>
