Used BEM naming, replaced focus, focusout js events with focus-within pseudoclass

--- a/Dummy-search-bar/dummy-search-bar.html
+++ b/Dummy-search-bar/dummy-search-bar.html
@@ -10,9 +10,9 @@
 
     <body>
      
-        <form id="top-search-bar" class="search-bar">
-            <input type="text" class="search-bar__input">
-            <i class="fa fa-search search-bar__button" aria-hidden="true"></i>
+        <form class="form">
+            <input type="text" class="form__input" placeholder="Search">
+            <i class="fa fa-search form__button form__button--search" aria-hidden="true"></i>
         </form>
     
     </body>
