--- a/features/Notes-content/Notes-content.html
+++ b/features/Notes-content/Notes-content.html
@@ -10,9 +10,11 @@
 </head>
 
 <body>
-    <section id="add-card"></section>
-    <section id="display-cards"></section>
+    <section id="add-card">
+        <button id="add-card-button" class="add-card__details">Take a note...</button>
+    </section>
 
+    <section id="display-cards"></section>
 
     <script src="./Notes-content.js"></script>
 </body>
