--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,7 @@
     <link rel="stylesheet" href="css/iconoir.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/Light-Dark-mode-toggle.css">
+    <link rel="stylesheet" href="css/dummy-search-bar.css">
 </head>
 
 <body>
@@ -43,9 +44,9 @@
         <button id="header__menu" class="header__menu"><i class="iconoir-menu"></i></button>
         <button class="header__home"><i class="iconoir-home"></i></button>
 
-        <form class="header__search">
+        <form class="form">
             <input type="text" class="form__input" placeholder="Search">
-            <i class="iconoir-search" aria-hidden="true"></i>
+            <i class="iconoir-search form__button form__button--search" aria-hidden="true"></i>
         </form>
 
         <button id="layoutToggleButton" class="layout__toggle__button" title="toggle list/grid view"
