--- a/src/index-trash.html
+++ b/src/index-trash.html
@@ -1,29 +1,3 @@
-<!-- <header>
-    Hamburger menu button
-    Home navigation button
-    Dummy Search Bar
-    List/Grid view button
-    Light/Dark mode toggle
-</header>
-
-<article>
-    <sidebar>
-        Notes Navigation Item
-        Trash Navigation Item
-    </sidebar>
-    <section>
-        Notes content
-        <card>
-            Note card CSS design
-            Add Note context menu
-        </card>
-    </section>
-
-    <section>
-        Trash content
-    </section>
-</article> -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -31,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <title>My Website</title>
+    <!-- <link rel="shortcut icon" href="favicon.ico"> -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/iconoir.css">
     <link rel="stylesheet" href="css/main.css">
@@ -60,25 +35,27 @@
 
     <main>
         <nav id="sidebar" class="navigation">
+        
+                <a href="index.html"  class="navigation__item">
+                    <i class="iconoir-multiple-pages"></i>
+                    <p class="navigation__item--link">Note</p>
+                </a>
 
-            <a href="index.html" class="navigation__item navigation__item--active">
-                <i class="iconoir-multiple-pages"></i>
-                <p class="navigation__item--link">Note</p>
-            </a>
-
-            <a href="index-trash.html" class="navigation__item ">
-                <i class="iconoir-bin"></i>
-                <p class="navigation__item--link">Trash</p>
-            </a>
-
+                <a href="index-trash.html" class="navigation__item navigation__item--active">
+                    <i class="iconoir-bin"></i>
+                    <p  class="navigation__item--link">Trash</p>
+                </a>
+          
         </nav>
 
-        <section id="main-content">
-            <section id="add-card">
-                <button id="add-card--button" class="add-card__details">Take a note...</button>
+        <section class="trash-content">
+            <section class="trash-content__menu">
+                <button class="menu__button trash-content__menu__restore-button" onclick="restoreAllNotes()">Restore everything</button>
+                <button class="menu__button trash-content__menu__delete-button" onclick="deleteAllNotes()">Empty bin</button>
             </section>
+            <section class="trash-content__notes"></section>
+        </section>
 
-            <section id="display-cards" data-notes-container></section>
         </section>
 
     </main>
@@ -86,11 +63,8 @@
     <footer>
     </footer>
 
-    <script src="js/note-content.js" defer></script>
-
+    <script src="js/deleted-content.js" defer></script>
     <script src="js/Light-Dark-mode-toggle.js" ></script>
-    <!-- <script src="js/fetch-data.js" defer></script> -->
-
 </body>
 
 </html>  
